RESOLVED FIXED21101
REGRESSION: Overflow scrollbar inactive after blurring and focusing the window
https://bugs.webkit.org/show_bug.cgi?id=21101
Summary REGRESSION: Overflow scrollbar inactive after blurring and focusing the window
Timothy Hatcher
Reported 2008-09-25 08:27:20 PDT
The overflow scroll area's scrollbar on YouTube will correctly show an inactive look when the window is blurred. But focusing the window again does not bring back the active scrollbar look. See screenshot.
Attachments
Screenshot showing the bug (16.98 KB, image/png)
2008-09-25 08:27 PDT, Timothy Hatcher
no flags
Patch (2.71 KB, patch)
2008-09-25 18:18 PDT, Dave Hyatt
no flags
Patch (1.46 KB, patch)
2008-09-25 18:19 PDT, Dave Hyatt
hyatt: review+
Timothy Hatcher
Comment 1 2008-09-25 08:27:50 PDT
Created attachment 23796 [details] Screenshot showing the bug
Dave Hyatt
Comment 2 2008-09-25 18:05:34 PDT
Not the scrollbar's fault. The focus controller is buggy and lying. See RenderLayer.cpp: Page* page = renderer()->document()->frame()->page(); return page && page->focusController()->isActive(); This is a bug that just happens to have been exposed by the scrollbar.
Dave Hyatt
Comment 3 2008-09-25 18:18:38 PDT
Dave Hyatt
Comment 4 2008-09-25 18:19:24 PDT
Timothy Hatcher
Comment 5 2008-09-25 18:20:48 PDT
Comment on attachment 23830 [details] Patch Wow.
Dave Hyatt
Comment 6 2008-09-25 18:22:42 PDT
Comment on attachment 23831 [details] Patch Tim meant to plus this one.
Dave Hyatt
Comment 7 2008-09-25 18:23:32 PDT
Fixed in r36919.
Note You need to log in before you can comment on or make changes to this bug.