2008-09-25  David Hyatt  <hyatt@apple.com>

https://bugs.webkit.org/show_bug.cgi?id=21101

        Fix the updating of the active state to not be dumb, so that viewless scrollbars repaint properly.

        Reviewed by Tim Hatcher

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _updateFocusedAndActiveState]):



Canonical link: https://commits.webkit.org/29188@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36919 268f45cc-cd09-0410-ab3c-d52691b4dbfc